<resources>
	<string name="default_tag">DEFAULT</string>
	<string name="init_databases">Init default values</string>
	<string name="init_add_news_feeds">Add default news feeds</string>
	<string name="init_done">Values added</string>
	<string name="init_view_news">View Newsfeeds</string>
	<string name="cancel">Cancel</string>
	<string name="ok">OK</string>
	<string name="news_service_settings">News Service</string>
	<string name="start_on_system_boot">Start on system boot</string>
	<string name="use_while_roaming">Use while roaming</string>
	<string name="debug_mode">Debug mode</string>
	<string name="running_now">Running now</string>
	<string name="summary_use_while_roaming">If ticked service will check for updates while roaming.</string>
	<string name="summary_start_on_system_boot">If ticked service will start when system boots.</string>
	<string name="summary_debug_mode">If ticked service will log all details.</string>
	<string name="summary_running_now">If ticked service will start if not yet running. If unticked service will stop.</string>
    <string name="newsreader_app_name">OI News Reader</string>
    <string name="select_feeds">Select feeds</string>
	<string name="feed_settings">Feed settings</string>
<string name="feedname_hint">Enter feed name here</string>
<string name="name">Name</string>
<string name="feedurl">Feed url</string>
<string name="type">Type</string>
<string name="save">Save</string>
<string name="feedurl_hint">Enter feed url here</string>
<string name="categories">Categories</string>
<string name="checkurl">Check url</string>
<string name="looking_up_feed_information">Looking for feed information</string>
<string name="show_advanced_settings">Show advanced settings</string>
<string name="hide_advanced_settings">Hide advanced settings</string>
<string name="checkforupdates">Check for updates (min):</string>
<string name="saveandrestart">Save and restart</string>
<string name="stop">Save</string>
<string name="start">Stop</string>
<string name="addfeed">Add feed</string>
<string name="addfeed_manually">Add feed manually</string>
<string name="feedadded">"Feed '%s' has been added."</string>
<string name="delete">Delete</string>
<string name="showoffline">Show message</string>
<string name="toggle">Toggle</string>
<string name="magnolia_tagging">Ma.gnolia tags</string>
<string name="update">Update</string>
<string name="newsservicestarted">NewsReaderService started</string>
<string name="newsservicestopping">NewsReaderService stopping..</string>
<string name="editfeed">Edit feed</string>
<string name="addnewfeed">Add new feed</string>
<string name="deletefeed">Delete feed</string>
<string name="servicesettings">Service settings</string>
<string name="servicestate">Service state</string>
<string name="feedfromurl">Feed from url</string>
<string name="checkicon">Check for icon</string>
<string name="mark_for_notification">Mark for notification</string>
<string name="markfeedasread">Mark Feed as read</string>
<string name="markallasread">Mark all as read</string>
<string name="newnews">New news in \'%1$s\' (%2$s)</string>
<string name="never">Never</string>
<string name="search">Search</string>
<string name="search_web">Search web</string>
<string name="gotolink">Go to site</string>
<string name="searchhint">Search term or \'*\' for all</string>
<string name="urlfailed">Could not connect to feed channel.</string>
<string name="all">All</string>
<string name="newsreader">OpenIntents Newsreader</string>
<string name="newsreader_select_1">OpenIntents Newsreader (\'%s\')</string>
<string name="previous">prev.</string>
<string name="next">next</string>
<string name="messagesettings">Settings for messages</string>
<string name="message_click_action">Preferred select action</string>
<string name="summary_message_click_action">Choose action when a message is selected</string>
<string name="dialog_title_message_click_action">Choose action</string>
<string name="default_encoding">Default encoding</string>
<string name="summary_default_encoding">Choose default encoding.</string>
<string name="dialog_title_default_encoding">Choose default encoding</string>
<string name="read_after_seconds">Mark as read automatically</string>
<string name="summary_read_after_seconds">If ticked a shown message is marked as read automatically.</string>
<string name="offline_read_exception">Could not prepare temporary file for offline reading.</string>
<string name="addcategory">Add category</string>
<string name="category_exists">Category already exists</string>
<string name="channelsettings">Settings for channels</string>
<string name="dialog_title_channel_sort_order">Choose sort order for channels</string>
<string name="sort_order">Sort order</string>
<string name="summary_sort_order">Choose which sort order to use</string>
<string name="mark_for_update">Delete messages before update</string>
<string name="search_channel">Search channel</string>
<string name="settings">Settings</string>
<string name="updateall">Update all</string>
<string name="select_categories">Select categories</string>
	<string name="timeout">Timeout</string>
	<string name="timeout_long">Trial period has ended.</string>
<string name="no_offline_msg"><![CDATA[
 <p>No offline message available.</p><p><a href="%s">Goto site</a></p>]]></string>
<string name="unknown_feed_type">Unknown feed type.</string>
<string name="invalid_feed_url">Feed URL is not reachable.</string>
<string name="about_openintents">About %s</string>
<string name="about">About</string>
<string name="about_openintents_text">Version %s \n\nOpenIntents 
		defines open intents and interfaces to make Android applications
		work together.\n\nFor more information visit the OpenIntents developer home at 
		http://www.openintents.org/newsreader
	</string>
<string name="compress_categories">Compress categories</string>
<string name="summary_compress_categories">Delete all unused categories</string>
<string name="dialog_title_compress_categories">Confirm delete</string>
<string name="search_web_for_feeds">Search web for feeds</string>
<string name="preselected_feed_hint">or pick from the preselected feeds below.</string>
<string name="search_web_help">"To copy a feed from the browser, long-click on the feed link and select 'Copy link URL'."</string>
<string name="open_browser">Open browser</string>
<string name="clipboard_content">Clipboard content:</string>
<string name="add_clipboard_feed">Add clipboard feed</string>
<string name="clipboard_empty">Clipboard empty</string>
<string name="invalid_link">Invalid URL</string>
<string name="purged_entrys">Purged %s records</string>
<string name="dialog_message_purge">This will delete all read content. Continue?</string>
<string name="preference_purgedata">Purge Data</string>
<string name="preference_purgedata_summary">This will purge old data from the Storage.</string>
<string name="online_feeds_dir">http://www.syndic8.com/</string>
<string name="newsreader_eula">Newsreader EULA</string>
</resources>