<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android" android:orientation="vertical" android:padding="4dip"
    android:gravity="center_horizontal"
    android:layout_width="fill_parent" android:layout_height="fill_parent">
	<TableLayout
	    android:layout_width="wrap_content" 
		android:layout_height="wrap_content" 
	>
	<TableRow>

    <Button android:id="@+id/startFeedService"
        android:layout_width="wrap_content" android:layout_height="wrap_content" 
        android:text="@string/start">
        <requestFocus />
    </Button>

    <Button android:id="@+id/stopFeedService"
        android:layout_width="wrap_content" android:layout_height="wrap_content" 
        android:text="@string/stop" />
	</TableRow>
	<TableRow>
			<TextView
			android:layout_width="wrap_content" android:layout_height="wrap_content"
			android:layout_weight="0"
			android:paddingBottom="4dip"
			android:textColor="#933100"
			android:text="@string/debug_mode"
			/>
		<CheckBox android:id="@+id/newsservice.debugmode"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				/>
	</TableRow>
	<TableRow>
			<TextView
			android:layout_width="wrap_content" android:layout_height="wrap_content"
			android:layout_weight="0"
			android:paddingBottom="4dip"			
			android:text="@string/start_on_system_boot"
			/>
		<CheckBox android:id="@+id/newsservice.startonboot"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				/>
	</TableRow>
	<TableRow>
			<TextView
			android:layout_width="wrap_content" android:layout_height="wrap_content"
			android:layout_weight="0"
			android:paddingBottom="4dip"			
			android:text="@string/use_while_roaming"
			/>
		<CheckBox android:id="@+id/newsservice.usewhileroaming"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				/>
	</TableRow>
	</TableLayout>
    <Button android:id="@+id/servicesettings.save"
        android:layout_width="wrap_content" android:layout_height="wrap_content" 
        android:text="@string/saveandrestart" />

</LinearLayout>